Loqate/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <description>JavaScript functions that allow Postcode Anywhere to perform custom actions based on certain events</description>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>