Loqate/main/default/objects/Action__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <defaultValue>&quot;function(control, detail) {&quot; +  BR() + &quot;    // Add JavaScript code here&quot; +  BR() + &quot;}&quot;</defaultValue>
    <description>Javascript that the system should execute on the event</description>
    <label>Code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>