Loqate/main/default/objects/Action__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>20</length>
    <type>Text</type>
</CustomField>