Loqate/main/default/objects/Action__c/fields/Event_Select__c.field-meta.xml
<CustomField>
    <fullName>Event_Select__c</fullName>
    <description>Picklist for selecting event. This will be used in preference to the Event text field when populated.</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PageStartup</fullName>
            </value>
            <value>
                <fullName>ComponentStartup</fullName>
            </value>
            <value>
                <fullName>ComponentLoaded</fullName>
            </value>
            <value>
                <fullName>AddressSearch</fullName>
            </value>
            <value>
                <fullName>AddressSelect</fullName>
                <default>true</default>
                <label>AddressSelect</label>
            </value>
            <value>
                <fullName>AddressCopy</fullName>
            </value>
            <value>
                <fullName>AddressClear</fullName>
            </value>
            <value>
                <fullName>FieldChange</fullName>
            </value>
            <value>
                <fullName>CountryChange</fullName>
            </value>
            <value>
                <fullName>ComponentError</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>